# tux

./: Makefile  README.md  pyproject.toml
packaging/: README.md  build_deb.py  entrypoint.py
src/tux/: __init__.py  chooser.py  cli.py  client.py  config.py  helpers.py  packaging.py  provision.py  runner.py  safety.py  state.py
src/tux/modes/: __init__.py  chat.py  command.py
tests/: test_chooser.py  test_cli.py  test_client.py  test_config.py  test_helpers.py  test_integration.py  test_packaging.py  test_provision.py  test_runner.py  test_safety.py  test_state.py
tests/modes/: test_chat.py  test_command.py
