[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tux"
description = "A terminal-native Linux assistant that proposes commands in plain English; you decide whether to run them."
requires-python = ">=3.11"
dynamic = ["version"]

[project.scripts]
tux = "tux.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.dynamic]
version = {attr = "tux.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
